# xiu-labai

labai-macos-v0.1.0/: Launch-LabAI-Setup.command  README.md  RELEASE_MACOS_CHECKLIST.md  RELEASE_MACOS_MANIFEST.md
labai-macos-v0.1.0/docs/: API_PROVIDERS.md  FIRST_RUN.md  (+3 more)
labai-v0.1.0/: README.md  RELEASE_CHECKLIST.md  RELEASE_MANIFEST.md  pyproject.toml
labai-v0.1.0/.claw/sessions/23d3099a7eda1857/: session-1776910117618-0.jsonl  session-1776910211750-0.jsonl  session-1776911432713-0.jsonl
labai-v0.1.0/.continue/checks/: labai-phase18-notebook-deliverable.md  labai-phase18-route2-task-manifest.md  labai-phase18-source-evidence.md
labai-v0.1.0/docs/: API_PROVIDERS.md  FIRST_RUN.md  INSTALL_WINDOWS.md  PROFILES.md  external-agent-patterns-route1.md
labai-v0.1.0/scripts/: verify_phase18_route2_workflow_closure.py
labai-v0.1.0/scripts/windows/: bootstrap-windows.ps1  install-labai.ps1  setup-local-ollama.ps1  verify-install.ps1
labai-v0.1.0/src/labai/: cli.py  config.py  data_contracts.py  editing.py  notebook_io.py  phase16_isolation.py  release_support.py  task_manifest.py  workflows.py
labai-v0.1.0/src/labai/execution/: base.py  claw.py  readiness.py
labai-v0.1.0/src/labai/papers/: notes.py  readiness.py
labai-v0.1.0/src/labai/providers/: __init__.py  base.py  deepseek.py  ollama.py
labai-v0.1.0/src/labai/research/: loop.py  modes.py
labai-v0.1.0/src/labai/runtime/: __init__.py  artifacts.py
labai-v0.1.0/templates/profiles/: fallback.toml
labai-windows-v0.1.0/: Launch-LabAI-Setup.cmd  README.md  RELEASE_CHECKLIST.md  RELEASE_MANIFEST.md
(+78 files in other folders)
