[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "labai"
version = "0.1.0"
description = "Local-first research agent shell scaffold for research assistants"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1,<9",
  "ipykernel>=6,<7",
  "nbclient>=0.10,<1.0",
  "nbformat>=5.10,<6.0",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pymupdf>=1.25,<2.0",
  "pypdf>=5,<6",
  "typer>=0.12,<1.0",
  "unidiff>=0.7,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
route2 = [
  "grep-ast>=0.9,<1",
]

[project.scripts]
labai = "labai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/labai"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Insecure writes have been enabled.*",
]
